# firefly-iii-ai-parser

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: build-push.yml
app/: ai.py  bot.py  firefly.py  log.py  processor.py  stubs.py
